# TrackGen

./: .gitattributes  .gitignore  README.md  TODO.md  __init__.py  generators.py  geometry.py  inflation.py  pyproject.toml  track_generator.py  types.py
benchmarks/: benchmark_collision.py  benchmark_pipeline.py  benchmark_relaxation.py  benchmark_yield_sweep.py  compare_generators.py  track_metrics.py
docs/: ARCHITECTURE.md  code-review-2026-06-27.md  code-review-followup-recommendations.md  conf.py  gates-3d.rst  generator-baseline.md  generator-contract.md  index.rst  pre-relaxation-generator-methods.md  racetrack-generation-prior-art.md  track-generation-state-of-the-art.md  tracks-25d.rst
paper/: Makefile  README.md  adjacent-surveys.bib  latexmkrc  macros.tex  main.tex  preamble.tex  references.bib
tests/: _checkpoints_oracle.py  _collision_fixtures.py  _collision_oracle.py  _localize_oracle.py  _progress_oracle.py  _props_oracle.py  _warp_compare.py  conftest.py  test_adjudication_workbook.py  test_agent_runs.py  test_benchmark_smoke.py  test_checkpoints.py  test_checkpoints_contract.py  test_closed_assemble.py  test_coding_reliability.py  test_collinear_robust.py  test_collision_bind.py  test_collision_contract.py  test_collision_cuda_graph.py  test_collision_discs.py  test_collision_fixtures.py  test_collision_frames.py  test_collision_geom.py  test_collision_sdf.py  test_collision_segments.py  test_compare_generators.py  test_course_config.py  test_course_cuda.py  test_course_cuda_graph.py  test_course_gates.py  test_course_gates_3d.py  test_course_line.py  test_course_track.py  test_end_to_end_relaxation.py  test_gate_3d.py  test_gate_generator.py  test_gate_generator_registry.py  test_gate_track_compat.py  test_generate_checkpoint.py  test_generate_concurrent_cuda.py  (+97 more)
track_gen/: __init__.py  _version.py  checkpoints.py  collision.py  course.py  generators.py  geometry.py  heightfield.py  inflation.py  localize.py  progress.py  props.py  relaxation.py  rng_utils.py  track_generator.py  types.py  warp_pipeline.py  warp_relax.py
viz/: make_report.py  param_explorer.py  plot_ablations.py  plot_gate_courses.py  plot_tracks.py  plot_tracks_3d.py  (+4 more)
(+667 files in other folders)
