[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "track_gen"
version = "0.1.0"
description = "GPU-batched race-track generator with centerline relaxation."
requires-python = ">=3.10"
# Warp-native runtime: the shipped package is pure NVIDIA Warp + numpy. torch and scipy
# are NOT runtime deps — they are used only by the test suite + the torch oracle (tests/_oracle)
# and the experimental Fourier generator, so they live in the dev extra.
dependencies = ["numpy", "warp-lang>=1.14"]

[project.optional-dependencies]
dev = ["pytest", "matplotlib", "scipy", "torch"]
ui = ["gradio"]
docs = ["sphinx", "furo", "sphinx-copybutton", "sphinx-design"]

[tool.setuptools.packages.find]
include = ["track_gen*"]

[tool.pytest.ini_options]
markers = [
    "benchmark: benchmark and performance smoke tests",
    "cuda: tests that require a CUDA device",
    "slow: tests that are useful for quality gates but slower than API/kernel smoke tests",
]
